@@ -2,13 +2,15 @@
    -- major features enhancements --
    * removed: hist.sh and yesterday.sh
    * bug fix in crypt.pl
-   * $prefix/share/rdup is used for common perl/shell files
+   * ${prefix/}share/rdup is used for common perl/shell files
+     all tools now source these files
    * all scripts source the share directory, making them smaller
    * all scripts are prefixed with rdup-
    * all installed scripts loose the .sh/.pl suffix (Debian Policy)
    * removed -N prefix arg from the utils
    * rdup-snap added (perl) tool ala mirror but works on hardlinked dir
    * rdup-snapshot added (shell) small wrapper for rdup and rdup-snap
+
 
 
 24 Sept 2006: 0.2.17 Miek <miek@miek.nl>
